# customer-support-agent

./: .env.example  .gitignore  README.md  pyproject.toml
data/: audit_log.jsonl  customers.json  memory_store.json  orders.json  policies.json
eval/: golden.jsonl  judge.py  metrics.py  run_eval.py
eval/results/: baseline_openai_results.json  baseline_openai_summary.md  baseline_results.json  baseline_summary.md  experiment_log.md  optimized_openai_results.json  optimized_openai_summary.md  optimized_results.json  optimized_summary.md
examples/: demo_conversations.md  long_multiturn_demo.py
src/agent/: __init__.py  agent.py  audit.py  main.py  memory.py  models.py  policy.py  prompts.py  security.py  tools.py
src/customer_support_agent.egg-info/: PKG-INFO  SOURCES.txt
tests/unit/: conftest.py  test_agent.py  test_escalation.py  test_memory.py  test_security.py  test_tools.py
